spacing on mobile front page, and prevent bad mobile display due to menu

--- a/source/_patterns/00-atoms/00-global/page/_page.scss
+++ b/source/_patterns/00-atoms/00-global/page/_page.scss
@@ -13,6 +13,10 @@ html {
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .dark-bg {
   color: $text-color-light;
 }
