--- a/source/_patterns/03-templates/front-page/_front-page.scss
+++ b/source/_patterns/03-templates/front-page/_front-page.scss
@@ -34,6 +34,8 @@ $dark-shade-bg-2: mix($white, $blue, 80%);
       padding-top: $large-spacing * 2;
       padding-bottom: $large-spacing * 4;
     }
+    padding-top: $standard-spacing;
+    padding-bottom: $large-spacing;
   }
 
   .layout--twocol-bricks {
@@ -44,15 +46,19 @@ $dark-shade-bg-2: mix($white, $blue, 80%);
     .layout__region--first-above {
       background-color: $light-shade-bg-1;
 
-      &:before {
+      &:before,
+      &:after {
         background-color: $light-shade-bg-1;
       }
     }
 
     .layout__region--second-above {
-      margin-top: $large-spacing;
+      @include breakpoint($medium) {
+        margin-top: $large-spacing;
+      }
       background-color: $dark-shade-bg-1;
 
+      &:before,
       &:after {
         background-color: $dark-shade-bg-1;
       }
@@ -61,16 +67,39 @@ $dark-shade-bg-2: mix($white, $blue, 80%);
     .layout__region--first-below {
       background-color: $light-shade-bg-2;
 
-      &:before {
+      &:before,
+      &:after {
         background-color: $light-shade-bg-2;
       }
     }
     .layout__region--second-below {
-      margin-top: $large-spacing;
+      @include breakpoint($medium) {
+        margin-top: $large-spacing;
+      }
       background-color: $dark-shade-bg-2;
 
+      &:before,
       &:after {
         background-color: $dark-shade-bg-2;
+      }
+    }
+
+    .layout__region--first-above,
+    .layout__region--first-below,
+    .layout__region--second-above,
+    .layout__region--second-below {
+      padding-bottom: $large-spacing;
+
+      /* fake the full width background for color block bg sections */
+      &:before,
+      &:after {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        display: block;
+        width: $standard-spacing + 3px;
+        height: 100%;
+        content: "";
       }
     }
 
@@ -93,7 +122,6 @@ $dark-shade-bg-2: mix($white, $blue, 80%);
         img {
           @include breakpoint($medium) {
             width: calc(115% + (#{$standard-spacing} * 3));
-            max-width: none;
             transform: translatex(-$standard-spacing);
           }
           @include breakpoint($large) {
@@ -101,26 +129,31 @@ $dark-shade-bg-2: mix($white, $blue, 80%);
             transform: translatex(calc((100vw - #{$max-content-width}) / -2));
           }
           display: block;
+          width: 100vw;
+          max-width: none;
+          transform: translatex(-$standard-spacing);
         }
       }
 
       /* fake the full width background for color block bg sections */
       &:before {
         @include breakpoint($medium) {
-          position: absolute;
-          z-index: -1;
-          top: 0;
-          left: 0;
-          display: block;
           width: $standard-spacing + 3px;
-          height: 100%;
-          content: "";
-          transform: translatex(calc(-100% + 3px));
         }
         @include breakpoint($large) {
           width: calc((100vw - #{$max-content-width})/2);
           transform: translatex(calc(-100% + 3px));
         }
+        left: 0;
+        transform: translatex(calc(-100% + 3px));
+      }
+
+      &:after {
+        @include breakpoint($medium) {
+          width: 0;
+        }
+        right: 0;
+        transform: translatex(calc(100% - 3px));
       }
     }
 
@@ -138,22 +171,23 @@ $dark-shade-bg-2: mix($white, $blue, 80%);
       }
 
       /* fake the full width background for color block bg sections */
+      &:before {
+        @include breakpoint($medium) {
+          width: 0;
+        }
+        left: 0;
+        transform: translatex(calc(-100% + 3px));
+      }
       &:after {
         @include breakpoint($medium) {
-          position: absolute;
-          z-index: -1;
-          top: 0;
-          right: 0;
-          display: block;
           width: $standard-spacing + 3px;
-          height: 100%;
-          content: "";
-          transform: translatex(calc(100% - 3px));
         }
         @include breakpoint($large) {
           width: calc((100vw - #{$max-content-width})/2);
           transform: translatex(calc(100% - 3px));
         }
+        right: 0;
+        transform: translatex(calc(100% - 3px));
       }
     }
   }
